# ARM-Notebooks

./: .buildinfo  .gitignore  CONTRIBUTING.html  License.txt  README.html  README.md  _config.yml  _toc.yml  doc-requirements.txt  environment.yml  genindex.html  getting-started.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: codeql-analysis.yml  deploy.yml  virus.yml
Instruments/RWP/: ARM RWP Data.html  ARM RWP Data.ipynb  (+2 more)
Modeling/: README.txt
Open-Science-Workshop-2022/: README.html  README.md
Summer-Schools/: README.html  README.md
Templates/: README.html  notebook-template.html  notebook-template.ipynb  tutorial-schedule.html  tutorial-schedule.md
Tutorials/: README.html  README.md
VAPs/: README.html  vap_notebook_list.html  vap_notebook_list.md
_sources/: CONTRIBUTING.md  README.md  getting-started.md
scripts/: example_calc_bias_corr_RMSE.py  example_calc_mean_std_pct.py  example_contour_2d_timeseries.py  example_contour_heatmap.py  example_contour_jointhist.py  example_contour_size_timeseries.py  example_plot_bar_composition.py  example_plot_diurnalcycle.py  example_plot_hist.py  example_plot_mean_size.py  example_plot_percentile_z.py  example_plot_scatter.py  example_plot_timeseries.py  plot_HISCALE_flight.py  plot_HISCALE_sfc_toa.py  prep_ACEENA_allobs.py  prep_CSET_allobs.py  prep_HISCALE_E3SM.py  prep_HISCALE_allobs.py  prep_MAGIC_allobs.py  prep_MARCUS_allobs.py  prep_SOCRATES_allobs.py  run_testcase_v2.py  scripts_jobsubmit.csh
tests/: test_package_imports.py
(+886 files in other folders)
