[metadata]
name = esmac_diags
version = 1.0-alpha
description = ESMAC_Diags diagnostics package
long_description = file: README.md 
license = bsd
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy
    pytest
    matplotlib
    netCDF4
    pip


include_package_data = True

[options.packages.find]
where = src
include = esmac_diags
